manifests/ingress/ingress.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ingress
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: citest-ingress
  namespace: ingress
spec:
  backend:
    serviceName: citest-ingress-svc
    servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citest-nginx-deploy
  namespace: ingress
  labels:
    app: citest-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citest-ingress
  template:
    metadata:
      labels:
        app: citest-ingress
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: nginx-conf
      volumes:
        - name: nginx-conf
          configMap:
            name: citest-nginx-conf-v5
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: default.conf
                path: conf.d/default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: citest-ingress-svc
  namespace: ingress
spec:
  type: NodePort
  selector:
    app: citest-ingress
  ports:
    - port: 80
      targetPort: 80
